<?xml version="1.0"?>
<package format="3">
    <name>my_controller</name>
    <version>0.0.1</version>
    <description>Listener for web control commands</description>
    <maintainer email="you@example.com">You</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>my_msgs</exec_depend>
</package>